frontend/tests/cases/negative/duplicateInstancePolymorphicSameName.gr
interface Simple a

-- duplicate instance for a (polymorphic) type
instance Simple a

instance Simple a
